# cnn-cifar-10

./: .envrc  .gitattributes  .gitignore  .markdownlint.json  README.md  README_visualization.md  flake.nix  pylock.toml  pylock_cuda.toml  pylock_viz.toml  pyproject.toml  requirements.txt  requirements_cuda.txt  requirements_viz.txt  visualize_logs.py
checkpoint/: cnn_best.pkl  cnn_best.pkl.bak  resnet32_best.pkl  resnet32_best.pkl.bak
log/: cnn_summary.txt  resnet32_summary.txt
src/: test_cli.py  train_cli.py
src/model/: cnn.py
src/utilities/: backend.py  train_utils.py
